<resources>
    <string name="app_name">Saveo</string>
    <string name="movies">Movies</string>
    <string name="release_date">Release Date : </string>
    <string name="popularity">Popularity : </string>
    <string name="vote_average">Vote Average : </string>
    <string name="overview">OverView</string>
    <string name="book_now">Book Now</string>
    <string name="movie_detials">Movie Detials</string>
</resources>